# CoPet

./: .gitignore  AGENTS.md  README.md  README.zh.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
docs/: architecture.md  architecture.zh.md
scripts/: create-icons.mjs
skills/: README.md
skills/copet-audio/: SKILL.md
src/: PetWindow.tsx  SettingsWindow.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/pets/copet/: pet.json
src-tauri/assets/pets/hoverpet/: pet.json
src-tauri/assets/pets/pethover/: pet.json
src-tauri/assets/pets/waddly-duck/: pet.json
src-tauri/assets/pets/zodiac-rooster/: pet.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  audio_pack.rs  commands.rs  config_store.rs  i18n.rs  lib.rs  main.rs  pet_context_menu.rs  pet_import.rs  pet_package.rs  pet_registry.rs  runtime_server.rs  runtime_state.rs  window_placement.rs
src-tauri/src/agents/: mod.rs
src-tauri/src/agents/adapters/: antigravity.rs  claude_code.rs  codex.rs  copilot.rs  gemini.rs  mod.rs  opencode.rs
src-tauri/tests/: agent_adapters.rs  agent_support.rs  audio_packs.rs  config_store.rs  config_store_sync.rs  diagnostics.rs  event_state_engine.rs  i18n.rs  pet_context_menu.rs  pet_import.rs  pet_interactions.rs  pet_sounds.rs  reset_pet_window_position.rs  runtime_http.rs  runtime_server_core.rs  runtime_state.rs  window_placement.rs
src-tauri/tests/agent_support/: antigravity.rs  claude_code.rs  codex.rs  copilot.rs  cursor.rs  gemini.rs  helpers.rs  manager.rs  opencode.rs  pi.rs
(+94 files in other folders)
