[package]
name = "hoverpet"
version = "0.1.0"
description = "Local desktop pet companion for Agent CLI workflows"
authors = ["HoverPet contributors"]
edition = "2021"

[lib]
name = "hoverpet_lib"
path = "src/lib.rs"

[[bin]]
# macOS uses the executable filename for the Dock label when no .app bundle
# is present (i.e. `pnpm tauri dev`). Capitalize so the Dock shows "HoverPet"
# in dev as it already does in the bundled .app via CFBundleName.
name = "HoverPet"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "5"
getrandom = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["macos-private-api", "protocol-asset", "tray-icon", "image-png", "image-ico"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
thiserror = "1"
toml = "0.8"
toml_edit = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSApplication", "NSResponder", "NSWindow", "NSWorkspace"] }
objc2-foundation = { version = "0.3.2", features = ["block2", "NSNotification", "NSOperation", "NSString"] }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.3", features = ["Win32_UI_WindowsAndMessaging"] }

[dev-dependencies]
tempfile = "3"
